@@ -22,6 +22,7 @@ export(getSpectralEnvelope)
 export(matchPars)
 export(morph)
 export(optimizePars)
+export(osc_dB)
 export(playme)
 export(schwa)
 export(segment)
